Fix the  API & auth bugs
